Allow dynamically providing allowed values for EnumParameter
This is useful when the allowed values depends on e.g. permissions that the current tenant has.

Also, using an EnumSet internally ensures no double entries and easier checks while using List externally allows easier calls and to not introduce breaking changes.

Fixes SE-15166